--- a/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
+++ b/src/main/webapp/pages/farmacia/medicamento/medicamento.xhtml
@@ -13,7 +13,7 @@
     <ui:composition template="/WEB-INF/view/templates/glue.xhtml">
 
         <f:metadata>
-            <f:viewParam name="id" value="#{medicamentoHome.medicamentoId}"/>
+            <f:viewParam name="medicamentoId" value="#{medicamentoHome.medicamentoId}"/>
         </f:metadata>
 
         <ui:define name="header-replace">
@@ -60,7 +60,7 @@
                             <f:selectItem itemLabel="Sobres" itemValue="Sobres" />  
                             <f:selectItem itemLabel="Jarabe" itemValue="Jarabe" />                              
                             <f:selectItem itemLabel="Crema" itemValue="Crema" />  
-                            <f:selectItem itemLabel="Pomada" itemValue="Podama" />  
+                            <f:selectItem itemLabel="Pomada" itemValue="Pomada" />  
                             <p:ajax event="change" update="@parent " partialSubmit="true"/>
                         </p:selectOneMenu>        
                         <h:graphicImage value="#{resource['success.gif']}" rendered="#{medicamentoHome.instance.presentacion!= null}"
